--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --nav-background-secondary: transparent;
+  --item-color: white;
 }
 
 body {
@@ -49,10 +50,30 @@ header {
   font-weight: bold;
 }
 
+
+
+.content ul li a:hover{
+  
+  color: #ffb744;
+  
+}
+
 .icon-nav-top {
   margin-bottom: -2px;
   margin-right: 7px;
+  width: 17px;
+  height: 17px;
 }
+
+.nav-top-info-icons{
+  display: none;
+}
+
+.icon-nav-top-social{
+  width: 22px;
+  height: 22px;
+}
+
 
 .change-color-primary {
   background-color: #fefeff;
@@ -63,7 +84,11 @@ header {
 
 .change-color-secondary {
   --nav-background-secondary: #03557c;
+  --item-color: white;
+
 }
+
+
 
 /*Barra de navegacion */
 
@@ -73,7 +98,7 @@ header {
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: white;
+  color: var(--item-color);
   margin-left: 50px;
   font-weight: bold;
 }
@@ -116,8 +141,8 @@ section {
 
 .form-register {
   margin-right: 60px;
-  min-width: 450px;
-  min-height: 500px;
+  
+  height: 500px;
   background-color: #fefeff;
   border: 1px solid gainsboro;
   border-radius: 3%;
@@ -288,6 +313,7 @@ video {
   min-height: 600px;
   padding: 20px 60px 60px 60px;
   background-color: #03557c;
+  
 }
 
 .about-container {
@@ -296,6 +322,7 @@ video {
   align-items: flex-start;
   justify-content: space-between;
   max-width: 1100px;
+ 
 }
 
 .about-text {
@@ -352,6 +379,11 @@ video {
   border-radius: 50%;
   width: 150px;
   height: 150px;
+}
+
+.beneficio-img{
+  margin-top: 25px;
+  width: 105px;
 }
 
 .col .beneficio-img {
@@ -534,6 +566,46 @@ video {
   border: 7px solid #fefeff;
 }
 
+.carousel{
+  width: 100%;
+  max-width: 1600px;
+}
+
+.carousel-control-next, .carousel-control-prev{
+  background-color: transparent;
+  border: none;
+}
+
+.carousel-responsive{
+  display: none;
+  
+}
+
+/*Reviews*/
+
+.reviews{
+  min-height: 500px;
+}
+
+#video-carousel {
+  max-width: 350px;
+  position:relative;
+}
+.play-icon {
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  width:80px;
+  height:80px;
+  border-radius:50%;
+  background-color: #d1542f;
+  background-image: url("images/play-fill.svg"); /* Cambia "play-icon.png" por la imagen que quieras usar para el botón de play */
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor:pointer;
+}
 /*Footer*/
 
 footer {
@@ -573,6 +645,11 @@ footer .row img {
 
   text-decoration: none;
 }
+
+.footer-col ul li a:hover {
+  color: #fab647;
+}
+
 
 .footer-copy {
   margin: 0px 30px 0px 30px;
@@ -621,7 +698,7 @@ footer .row img {
 .footer-icon {
   margin-left: -30px;
   margin-right: 20px;
-  color: white;
+ 
 }
 
 .footer-social-icons {
@@ -642,15 +719,34 @@ footer .row img {
   }
 }
 
+@media screen and (max-width: 990px) {
+  :root {
+    --nav-background-secondary: white;
+    --item-color: #03557c;
+  }
+  
+  
+  .nav-bar{
+    padding: 10px;
+  }
+  
+    .beneficio h2{
+      font-size: 25px;
+    }
+
+ 
+  }
+
 @media screen and (max-width: 882px) {
   /*hero*/
 
   .hero {
-    padding: 255px 0px 60px 0px;
+    padding: 205px 0px 60px 0px;
   }
   .hero .hero-contenedor {
     flex-direction: column;
     justify-content: center;
+    align-items: center;
   }
 
   .hero-text {
@@ -661,12 +757,26 @@ footer .row img {
     padding-bottom: 40px;
   }
 
-  .form-register {
-    display: none;
-    min-width: 200px;
+  .form-register{
+    margin-right: 0;
     width: 400px;
+    height: 490px;
   }
 
+  .form-title{
+    font-size: 20px;
+  }
+
+  form{
+    font-size: 15px;
+  }
+
+  .btn-form {
+    font-size: 14px;
+    padding: 8px;
+    width: 140px;
+ 
+  }
   /*about me*/
   .about-container {
     flex-direction: column;
@@ -723,9 +833,22 @@ footer .row img {
     align-items: center;
     justify-content: center;
   }
+
+
+  .news-letter input {
+    height: 43px;
+}
 }
 
+
+
+
+
 @media screen and (max-width: 820px) {
+
+  
+
+  
   .clase {
     margin: 10px;
   }
@@ -767,24 +890,81 @@ footer .row img {
     width: 100%;
   }
 
+
+  /*team*/
+  .carousel-principal{
+    display: none;
+  }
+
+  .carousel-responsive{
+    display: block;
+  }
+
+
+  #video-carousel {
+    max-width: 300px;
+  }
+
+
+  .footer-copy{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 0px 30px 0px;
+  }
+
+  .footer-copy .parrafo {
+    width: 100%;
+    text-align: center;
+}
+
+
   .footer-col {
     padding-top: 50px;
   }
 }
 
 @media screen and (max-width: 620px) {
-  .hero {
-    padding: 300px 0px 60px 0px;
-  }
+  
 
   .navbar {
     padding: 20px;
   }
 
-  .content {
-    flex-direction: column;
-    align-items: center;
+  .nav-top-info{
+    display: none;
+  }
+
+  .nav-top-info-icons{
+    display: block;
+  }
+
+  .content{
     justify-content: center;
+  }
+
+  .content ul li .nav-item-top{
+    padding: 10px 10px;
+  }
+
+  .icon-nav-top-social{
+    margin-top: 5px;
+    width: 17px;
+    height: 17px;
+  }
+
+  .beneficio h2{
+    font-size: 20px;
+  }
+ 
+  .beneficio-circle{
+    width: 120px;
+    height: 120px;
+  }
+
+  .beneficio-img{
+    margin-top: 18px;
+    width: 90px;
   }
 }
 
@@ -806,15 +986,41 @@ footer .row img {
       width: 300px;
       margin: 20px;
     }
+
+     .reviews{
+      min-height: 450px;
+
+    }
+
+    #video-carousel {
+      max-width: 250px;
+    }
+
+
+    /*Form*/
+    .form-register{
+     
+      width: 280px;
+      height: auto;
+    }
+  
+    .form-title{
+     font-size: 17px;
+    }
+  
+    form{
+      padding: 15px 20px 20px 20px;
+      font-size: 13px;
+    }
+
+
 }
 
 
 @media screen and (max-width: 459px){
 
 
-  .hero {
-    padding: 350px 0px 60px 0px;
-  }
+  
 
   .nav-top{
     font-size: 14px;
@@ -832,11 +1038,8 @@ footer .row img {
     }
 
 
-    .nav-top-info{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+    .content{
+      padding: 0px;
     }
     
     .team-text{
@@ -851,6 +1054,23 @@ footer .row img {
 
     .study-carrers .contenedor{
       padding: 0px 60px 0px 35px;
+    }
+
+    .beneficios-container{
+      padding: 40px;
+    }
+    .beneficio h2{
+      font-size: 15px;
+    }
+   
+    .beneficio-circle{
+      width: 100px;
+      height: 100px;
+    }
+
+    .beneficio-img{
+      margin-top: 15px;
+      width: 72px;
     }
 }
 
